objects/PC_Task_Channel_Mapping__mdt.object
<CustomObject>
    <description>Mapping standard Task Subtype to custom Task subtype and custom Task sub subtypes</description>
    <fields>
        <fullName>FROM__c</fullName>
        <description>CustomTask Subtype value available for the user to pick</description>
        <label>FROM</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SUB__c</fullName>
        <description>Custom Task Sub Subtype</description>
        <label>SUB</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO__c</fullName>
        <description>Standard Task Subtype</description>
        <label>TO</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>PC Task Channel Mapping</label>
    <pluralLabel>PC Task Channel Mappings</pluralLabel>
</CustomObject>